@@ -1,6 +1,6 @@
 DIST shotwell-0.30.4.tar.xz 6449848 BLAKE2B 071358d4053a09cac0fc37b90f2dc0f5fcdd374cda616acaa1b234b86901c6529c622da93ad4485802461c1cc59c2475d6a9f5fcca5e38b7afac26e90a563b85 SHA512 a998d8880fca1907c5859744651cf7948db676db1e1fb2205ae9a9aaa0ba5b3b543d9fe29f758469cec11df79efb57de6a81f4b4c64c90a052d9006baced7d21
 DIST shotwell-0.31.0.tar.xz 6482576 BLAKE2B b9e9cc3d520777940fe60212feabb851e504b5c6347a2e707b2f456ee971a35ff633f494256a4635a7d4ea3ea390940202220bd32e31f1e332e3e6a3e8af0088 SHA512 09e3a5f6eda7a1253b3ac62c4315fbc7edf1de0c7f1ee7e61438607cab39ac9d403d551f9d65c2faf7388ac0deaf3f70b13e618c006ff84a5decbf5492827718
-EBUILD shotwell-0.30.4.ebuild 1755 BLAKE2B bb64d910daa313e385f5aa14d267ee0937e3df141559b62055f1d5f0601bfce3b1267f163e35dfb9b903ba1895a9d40f8dbb80b1751fe2ad3622b4c85125ae90 SHA512 a47b1c1593ad19be6c98fc2fa36e9c125eac7a57b368d90ba5beb09cfc4b2d301f277b593d3548630711aa6bd2113ef2199177c57e27b2eae59422289267b9f7
+EBUILD shotwell-0.30.4.ebuild 1825 BLAKE2B 3ca233e6755de2bdd3911113baa58082cd8346d0c8622a7b7c6aff5d6e263a4271c21c77f265dfef8f8cc28cae73d091bb5c7cd48f276b9b4754e439b1a28946 SHA512 17ded5db57657d3ea153ffcb95a524d22a02a3e3e9a7319737e2bff65e77585104fbf73b174d6d7f94870f9325712d8dab4d594dc5001d3723b6f31c1713f4bf
 EBUILD shotwell-0.31.0.ebuild 1951 BLAKE2B 009ea40e96623839ea97b4742cba088e4f4eb9f1a444e66a1d98f3a1c0ff84e7be6343f2e5cafb574a0d404e4b8cea10c4eda39f386149a31f3eace22f3b2800 SHA512 a3c068a340ad6e183e7633ab6c0deee20f309cf6338104f4349dabb979ba3edb0c48ef48c5f41de6b747b886bdb8e3a112823bed4df9c93edc23eeab758b2322
-MISC ChangeLog 359 BLAKE2B e9d19713775f7e22a8c96f8d94e56507968564d6974ed843793eadf54e99086748af946d2f6fbd52887d17a75426e883eee19aa7b11a48a56c0f50677608b3ef SHA512 21b714497f589f461c9b2e355de635a98eefc9f871a10a7b8d580f081977a6922c760eaf465865e7933091e593285d45c97f7b1c3c00bf6095a215b93db4ce5e
+MISC ChangeLog 465 BLAKE2B 756de2f7f32364bb613e84d88d4715afacaba9d386d372d1ea66b9c68100a7f46f96236b667e64135c8ec96889ba66c589502b697b5be3d2c6ddbcf72444c640 SHA512 f1308fa7015f04d93b57e62f73de32629218734f3e705e20a00c7f7e5f479a8ad555e5d24afad223df324b76c491392917676615b8dc29ec9707063ef6548454
 MISC metadata.xml 915 BLAKE2B 7f83fe936f9a575c6dd12b014007cd97c5a8ada9aa5e55ddeaddefa4eb05d724a068c81d2f6f41c5b1bae01ed2c4326eb5eba5d4bdccf48619edeb43a8eaabfd SHA512 1b226f7fabfd7f5ee4d82b28ce2998273225319b055c01509cc5e493fdc037941c0edd0099df5dada00228fb225bf5e35d0035d3cd244890ad0cbd929b84d214
